--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -6,22 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MyFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:viewBindingIgnore="false">
 
 
-    <View
+    <by.alisa.supruniuk.workwithdagger.view.customview.MyCustomView
         android:id="@+id/myView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:background="@color/black" />
+        android:background="@color/black" >
+        <TextView
+            android:id="@+id/tvNameColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/purple"/>
 
-    <TextView
-        android:id="@+id/tvNameColor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+    </by.alisa.supruniuk.workwithdagger.view.customview.MyCustomView>
 
     <ProgressBar
         android:id="@+id/pb"
