--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MyCustomView">
-        <attr name="android:text" format="string"/>
-        <attr name="android:background" format="integer"/>
+        <attr name="colorName" format="string"/>
+        <attr name="backgroundColor" format="color"/>
     </declare-styleable>
 </resources>
