--- a/app/src/main/res/layout/my_custom_view.xml
+++ b/app/src/main/res/layout/my_custom_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/myView"
-        custom:backgroundColor="@color/black" />
+        android:background="@color/black" />
 
 
     <TextView
@@ -19,6 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        custom:textColor="@color/purple"/>
+        android:text="@color/purple"/>
 
 </FrameLayout>
