--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -14,7 +14,8 @@
         android:id="@+id/myCustomView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center">
 
     </by.alisa.supruniuk.workwithdagger.view.customview.MyCustomView>
 
