--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.MainActivity">
+    tools:context=".ui.activity.MainActivity">
     <fragment
         android:id="@+id/myFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:name="by.alisa.supruniuk.workwithdagger.view.MyFragment"/>
+        android:name="by.alisa.supruniuk.workwithdagger.ui.fragment_one.FragmentOne"/>
     <fragment
         android:id="@+id/secondFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:name="by.alisa.supruniuk.workwithdagger.view.SecondFragment"/>
+        android:name="by.alisa.supruniuk.workwithdagger.ui.fragment_two.FragmentTwo"/>
 
 </LinearLayout>
