--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,68 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment_one.FragmentOne"
     android:orientation="vertical"
+    tools:context=".ui.fragment_with_custom_view.FragmentOne"
     tools:viewBindingIgnore="false">
 
 
-    <by.alisa.supruniuk.workwithdagger.ui.customview.MyCustomView
+    <by.alisa.supruniuk.workwithdagger.ui.custom_view.MyCustomView
         android:id="@+id/myCustomView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp">
 
-    </by.alisa.supruniuk.workwithdagger.ui.customview.MyCustomView>
+    </by.alisa.supruniuk.workwithdagger.ui.custom_view.MyCustomView>
 
     <ProgressBar
         android:id="@+id/pb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:indeterminateDrawable="@drawable/spinner_png"
         android:indeterminateOnly="true"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/btnGenerate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="visible"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnGenerate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginRight="3dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Generate"
-            android:textColor="#191515"
-            app:backgroundTint="#83B2B8" />
-
-        <Button
-            android:id="@+id/btnHeavyData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Data"
-            android:textColor="#191515"
-            app:backgroundTint="#83B2B8" />
-    </LinearLayout>
-    <TextView
-        android:id="@+id/tvHeavyData"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"/>
+        android:layout_marginTop="10dp"
+        android:text="Generate"
+        android:textColor="#191515"
+        app:backgroundTint="#83B2B8" />
 
 
 </LinearLayout>
