--- a/app/src/main/res/values/my_theme.xml
+++ b/app/src/main/res/values/my_theme.xml
@@ -1,16 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.WorkWithDagger" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="MyTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
         <item name="android:windowBackground">?attr/myThemeBackgroundColor</item>
         <item name="background">?attr/myThemeBackgroundColor</item>
         <item name="android:textColor">?attr/myThemeTextColor</item>
@@ -24,5 +15,6 @@
         <item name="actionBarItemBackground">@color/bottomBindBack</item>
         <item name="android:textColorPrimary">?attr/myThemeTextColor</item>
         <item name="actionMenuTextColor">?attr/myThemeTextColor</item>
+
     </style>
 </resources>
