--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,6 @@
     <!-- Base application theme. -->
     <style name="Theme.WorkWithDagger" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,6 +11,21 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">?attr/myThemeBackgroundColor</item>
+        <item name="background">?attr/myThemeBackgroundColor</item>
+        <item name="android:textColor">?attr/myThemeTextColor</item>
+        <item name="myThemeTextColor">@color/myThemeTextColor</item>
+        <item name="myThemeBackgroundColor">@color/myThemeBackColor</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="colorPrimary">?attr/myThemeColorPrimary</item>
+        <item name="colorPrimaryDark">?attr/myThemeColorPrimaryDark</item>
+        <item name="colorAccent">?attr/myThemeColorAccent</item>
+        <item name="myThemeColorBottomBindBack">#60B1AB</item>
+        <item name="myThemeColorAccent">#DCAF6C</item>
+        <item name="myThemeColorPrimary">#D58989</item>
+        <item name="myThemeColorPrimaryDark">#EFD6D6</item>
+        <item name="android:textColorPrimary">?attr/myThemeTextColor</item>
+        <item name="actionMenuTextColor">?attr/myThemeTextColor</item>
     </style>
 
 </resources>
